# beg_guide_glmm

./: .gitignore  CLAUDE.md  pyproject.toml  rproject.toml
.claude/: settings.local.json
Context/: agent1_pedagogy_report.md  agent2_actuarial_practice_report.md  agent3_theory_methods_report.md  mlops_model_verification_architecture.md  mlops_model_verification_discussion.md  project_description.md  report_for_actuarial_management.md  report_for_engineering.md  research_agent_prompt.md  research_h2o_tweedie_deep_dive.md  research_hdtweedie_deep_dive.md  research_python_1to1_alternatives.md  research_python_workarounds.md  research_r_plumber_production_case.md  research_transcoding_feasibility.md  syllabus.md
Data/: synthetic_lmm_data.csv
Data/raw/: Baileyetal2008.xls  DrugsMites.xls  PolychaetaV3.txt  WBees.txt  workerbees.xls
Notebooks/: Comp_Loss_MCMC_Diagnostics.html  pooling_explanations.qmd
Notebooks/Advanced/: Comp_Loss_MCMC_Diagnostics.qmd  Comp_Loss_Repro.qmd  Intro_Mixed_Effects.qmd  ml_and_reml_optimization.nb  pymc_hurdle.ipynb
Notebooks/Comp_Loss_MCMC_Diagnostics_files/libs/bootstrap/: bootstrap.min.css
Notebooks/PMMA/: PMMA_Ch2.qmd  PMMA_Ch3.qmd
R/: pred_boxplots_group.r
R/GLMGLMM_RCode/: Chapter1.R  Chapter2.R  Chapter3.r  Chapter4.R  Chapter5.R  Chapter6.r  Chapter7.R
