[project]
name = "beg-guide-glmm"
version = "0.1.0"
description = "Beginner's Guide to GLMM for Insurance Python EnvironmentX"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "arviz>=0.22.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "seaborn>=0.13.2",
]
